1997-11-27  Laurent Pautet <pautet@esmeralda.enst.fr>
        
        * xe_stubs.adb: When an exception is raised from the user code,
        some finalization code has to executed (for instance, local
        termination). Catch exception, execute finalization code and
        re-raise exception. Fix partially 4827-G01.
        
1997-11-18  Laurent Pautet <pautet@esmeralda.enst.fr>
        
        * xe_check.adb: Fix incorrect test concerning configuration of
        generic unit.
        
        * xe_stubs.adb: Fix incorrect caller object filename. Should be
        computed from source spec file name (gnat.adc).
        
1997-11-17  Laurent Pautet <pautet@esmeralda.enst.fr>
        
        * xe_stubs.adb: Fix incorrect test which skipped a debugging
        message.
        
        * xe_check.adb: Search through unit U hierarchy to find a RCI
        parent and check whether this unit is configured on its child
        partition. Fix 4814-G01.
        
        * xe_back.adb: Change Get_Parent to return No_Name when there is
        no parent.
        
1997-10-30  Samuel Tardieu <sam@inf.enst.fr>
        
        * xe_check.adb: Pass the value of -jN flag to Compile_Sources.
        
1997-10-29  Samuel Tardieu <sam@inf.enst.fr>
        
        * gnatdist.in: Use EXTRA_LIBS from configure.
        
1997-10-29  Laurent Pautet <pautet@scapin.enst.fr>
        
        * xe_utils.adb, xe_utils.ads: Remove unused subprograms (basically
        xe-gcc stuff). Change function Strip_Uname_Suffix into U_To_N.
        
        * xe_stubs.adb: Change to new stub generation. Handle generic
        packages.
        
1997-10-24  Laurent Pautet <pautet@esmeralda.enst.fr>
        
        * xe_utils.ads: Add a procedure Free (to deallocate a
        string_access variable). Add Configuration parameter in procedure
        Produce_Partition_Executable (compilation, binding and linking are
        executed in current directory and no longer in