@@ -1,3 +1,8 @@
+1997-12-11  Laurent Pautet  <pautet@scapin.enst.fr>
+
+	* xe_stubs.adb: Fix 4911-G01. Handle properly the case in which a
+	RCI has only a spec.
+
 1997-11-27  Laurent Pautet <pautet@esmeralda.enst.fr>
         
         * xe_stubs.adb: When an exception is raised from the user code,
